src/objects/zkmulti__Pickup_Custom_Address_Source__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Auto_Create_Pickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Building_Type_Description_Field__c</fullName>
        <label>Building Type Description Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Building_Type_Field__c</fullName>
        <label>Building Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Code_Field__c</fullName>
        <label>Carrier Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__City_Field__c</fullName>
        <label>City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Close_Time_Field__c</fullName>
        <label>Close Time Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Company_Name_Field__c</fullName>
        <label>Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contact_Email_Field__c</fullName>
        <label>Contact Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contact_Name_Field__c</fullName>
        <label>Contact Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contact_Phone_Field__c</fullName>
        <label>Contact Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Country_Field__c</fullName>
        <label>Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Courier_Remarks_Field__c</fullName>
        <label>Courier Remarks Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency_Field__c</fullName>
        <label>Currency Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Address_Source_Object__c</fullName>
        <label>Custom Address Source Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Error_Message_Field__c</fullName>
        <label>Error Message Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Residential_Field__c</fullName>
        <label>Is Residential Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Origin_Custom_Address_Source_Id_Field__c</fullName>
        <label>Origin Custom Address Source Id Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Count_Field__c</fullName>
        <label>Package Count Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Location_Field__c</fullName>
        <label>Package Location Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Type_Field__c</fullName>
        <label>Package Type Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup_Object_Lookup_Field__c</fullName>
        <label>Pickup Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup_Service_Category_Field__c</fullName>
        <label>Pickup Service Category Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Preference_Name_Field__c</fullName>
        <label>Preference Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Ready_Time_Field__c</fullName>
        <label>Ready Time Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Country_Field__c</fullName>
        <label>Recipient Country Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference_Number_Field__c</fullName>
        <label>Reference Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Service_Type_Field__c</fullName>
        <label>Service Type Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Object_Lookup_Field__c</fullName>
        <label>Shipment Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Selection_Condition_Field__c</fullName>
        <label>Shipment Selection Condition Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__State_Field__c</fullName>
        <label>State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Street_1_Text_Line_Field__c</fullName>
        <label>Street 1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Street_2_Text_Line_Field__c</fullName>
        <label>Street 2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Street_Field__c</fullName>
        <label>Street Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UTC_Time_Field__c</fullName>
        <label>UTC Time Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Field__c</fullName>
        <label>Weight Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units_Field__c</fullName>
        <label>Weight Units Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Zip_Postal_Code_Field__c</fullName>
        <label>Zip/Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Pickup Custom Address Source</label>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pickup Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pickup Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>